Trying flexbox centering on postTags to fix text not centering on mobile

--- a/public/home.css
+++ b/public/home.css
@@ -215,11 +215,13 @@ p{
 }
 
 .htmlTag, .cssTag, .jsTag{
+    display:flex;
+    align-items: center;
+    justify-content: center;
     width:calc(2.8em + 2vmin);
     height:calc(1em + 2vmin); 
     border-radius:10px; 
     color:white; 
-    text-align:center;
     font-size:calc(0.8em + 2vmin);
     border-style:none;
     cursor:pointer;
